test/files/neg/t0207.scala
trait A {
  type T[_]
  type S = (T with T)[A]
}
